--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: BY Blog
-SEOTitle: 进化岛的博客 | BY Blog
+SEOTitle: 卓越进化岛 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: jinhuadao@hotmail.com
-description: "不断进化."
+description: "不断进化"
 keyword: "进化,认知升级,阅读,纪录片,公开课,视频"
 url: "http://jinhuadao.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
