--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "不断进化"
 keyword: "进化,认知升级,阅读,纪录片,公开课,视频"
 url: "http://jinhuadao.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/jinhuadao/jinhuadao.github.io.git" # you code repository
+# github_repo: "https://github.com/jinhuadao/jinhuadao.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -74,7 +74,7 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: b50bf2b12b5338a1845e33832976fd68
+#ba_track_id: b50bf2b12b5338a1845e33832976fd68
 
 # Google Analytics
 ga_track_id: 'UA-154570152-1'            # Format: UA-xxxxxx-xx
