--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 卓越进化岛
-SEOTitle: 卓越进化岛 | BY Blog
+SEOTitle: 卓越进化岛
 header-img: img/post-bg-desk.jpg
 email: jinhuadao@hotmail.com
 description: "不断进化"
