--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ kramdown:
 
 # Gitalk
 gitalk:
-  enable: true    #是否开启Gitalk评论
+  enable: false    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
   repo: jinhuadao.github.io    #仓库名称
@@ -99,16 +99,16 @@ service-worker: true
 # Friends
 friends: [
     {
-        title: "WY",
-        href: "http://zhengwuyang.com"
+        title: "卓越进化岛",
+        href: "https://mp.weixin.qq.com/s/BIsoHB7wT_e38kzngAPKQQ"
     },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
+        title: "读书舍",
+        href: "https://mp.weixin.qq.com/s/e4bdeS2hIkXBEaom-IcCWQ"
     },{
-        title: "Apple",
-        href: "https://apple.com"
+        title: "大学生成长",
+        href: "https://mp.weixin.qq.com/s/Ep5RQZHYi5g6ILQk6Z5Llw"
     },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
+        title: "中科院读书舍",
+        href: "https://mp.weixin.qq.com/s/4UZwPVb2uyME9Pxgwu4Elw"
     }
 ]
