--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: 卓越进化岛
-SEOTitle: 卓越进化岛
+title: 值乎新闻
+SEOTitle: 值乎新闻
 header-img: img/post-bg-desk.jpg
-email: jinhuadao@hotmail.com
-description: "不断进化"
-keyword: "进化,认知升级,阅读,纪录片,公开课,视频"
-url: "http://jinhuadao.github.io"          # your host, for absolute URL
+email: zhihunews@outlook.com
+description: "值得阅读的新闻"
+keyword: "新闻"
+url: "http://news.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 # github_repo: "https://github.com/jinhuadao/jinhuadao.github.io.git" # you code repository
 
