--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/post-bg-desk.jpg
 email: zhihunews@outlook.com
 description: "值得阅读的新闻"
 keyword: "新闻"
-url: "http://news.github.io"          # your host, for absolute URL
+url: "http://zhihu.news"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 # github_repo: "https://github.com/jinhuadao/jinhuadao.github.io.git" # you code repository
 
