--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 值乎新闻
 SEOTitle: 值乎新闻
 header-img: img/post-bg-desk.jpg
 email: zhihunews@outlook.com
-description: "值得阅读的新闻"
+description: "About You"
 keyword: "新闻"
 url: "https://zhihu.news"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
