--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 值乎新闻
-SEOTitle: 值乎新闻
+title: 值乎
+SEOTitle: 值乎
 header-img: img/post-bg-desk.jpg
 email: zhihunews@outlook.com
 description: "About You"
