--- a/_config.yml
+++ b/_config.yml
@@ -102,11 +102,11 @@ friends: [
         title: "看美剧",
         href: "http://yyetss.com/"
     },{
-        title: "豆瓣",
-        href: "https://www.douban.com/"
+        title: "TED演讲",
+        href: "https://www.ted.com/"
     },{
-        title: "知乎热榜",
-        href: "https://www.zhihu.com/hot"
+        title: "多吉搜索",
+        href: "https://www.dogedoge.com/"
     },{
         title: "哈佛商业评论",
         href: "https://www.hbrchina.org/"
