--- a/_config.yml
+++ b/_config.yml
@@ -102,6 +102,9 @@ friends: [
         title: "看美剧",
         href: "http://yyetss.com/"
     },{
+        title: "澎湃新闻",
+        href: "https://www.thepaper.cn/"
+    },{
         title: "TED演讲",
         href: "https://www.ted.com/"
     },{
