--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 值乎
-SEOTitle: 值乎：只有有价值的信息
+title: 智乎
+SEOTitle: 智乎：分享有价值的信息
 header-img: img/post-bg-desk.jpg
 email: zhihunews@outlook.com
 description: "有价值的信息"
-keyword: "新闻"
+keyword: "智乎"
 url: "https://zhihu.news"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 # github_repo: "https://github.com/jinhuadao/jinhuadao.github.io.git" # you code repository
