--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 智乎
-SEOTitle: 智乎：分享有价值的信息
+SEOTitle: 智分享有价值的信息
 header-img: img/post-bg-universe.jpg
 email: zhihunews@outlook.com
 description: "有价值的信息"
